workspace-sf/force-app/main/default/objects/dadosDocumentosPDF__mdt/dadosDocumentosPDF__mdt.object-meta.xml
<CustomObject>
    <description>Metadado para armazenar as informações que hoje estão fixas nos pdf&apos;s de documentos do seguro de vida/viagem</description>
    <label>Dados documento pdf</label>
    <pluralLabel>Dados documento pdf</pluralLabel>
</CustomObject>