workspace-sf/force-app/main/default/objects/dadosDocumentosPDF__mdt/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <description>Cargo para serem apresentados no PDF</description>
    <label>Cargo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>