workspace-sf/force-app/main/default/objects/dadosDocumentosPDF__mdt/fields/Descricao_do_cargo__c.field-meta.xml
<CustomField>
    <fullName>Descricao_do_cargo__c</fullName>
    <description>Descrição do cargo a ser apresentada no PDF.</description>
    <label>Descrição do cargo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>