workspace-sf/force-app/main/default/objects/dadosDocumentosPDF__mdt/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <description>Nome de diretor, funcionário e etc.</description>
    <label>Nome</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>